@@ -1,3 +1,8 @@
+2004-05-04  David Reveman  <c99drn@cs.umu.se>
+
+	* src/cairo_pattern.c (_cairo_image_data_set_radial): Corrected some
+	confusing comments about the math used for radial gradients.
+
 2004-05-01  David Reveman  <c99drn@cs.umu.se>
 
 	* src/cairo_gl_surface.c (_cairo_gl_surface_create_pattern): 
